  QGraphicsScene::addItem() to add the item to the scene.

* QAbstractItemView and derived classes only emit the clicked() signal on left click now,
  instead of on all mouse clicks.

* QProxyModel has been removed. It is deprecated since early Qt 4 versions and replaced
  by QAbstractProxyModel and related classes. A copy of QProxyModel is available
  in the UiHelpers library.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is
  one of the IP loopback addresses.

* QSslCertificate::serialNumber() now always returns the serial number in
  hexadecimal format.

* The openssl network backend now reads the ssl configuration file allowing
  the use of openssl engines.

QtDBus
------
* QtDBus now generates property annotations for the Qt type names
  in the org.qtproject.QtDBus namespace. When parsing such annotations
  both the old and new namespaces are accepted.

* QtDBus error codes have been updated to be on the org.qtproject.QtDBus.Error
  namespace.

QtConcurrent
------------

* QtConcurrent is no longer in QtCore, but forms its own library now.
  QMake-based projects can use
    QT += concurrent
  to include the new library.

QtOpenGL
--------

* Most of the classes in this module (with the notable exception of QGLWidget)
  now have equivalents in QtGui, along with the naming change QGL -> QOpenGL.
  The classes in QtOpenGL that have equivalents in QtGui can now be considered
  deprecated.

QtScript
--------
* [QTBUG-2124]  Added default conversion for long and unsigned long.
* [QTBUG-6133]  Fixed QScriptContextInfo::functionMetaIndex() for overloaded
  slots.
* [QTBUG-15213] Doc: Added missing properties to the ECMAScript reference.
* [QTBUG-15956] Doc: Removed wrong information about Error .stack properties.
* [QTBUG-17915] Fixed a crash when a JS property descriptor was only partially
  defined.
* [QTBUG-18188] Fixed a regression that caused contexts created by